项目结构优化

--- a/src/LiteMonitor.csproj
+++ b/src/LiteMonitor.csproj
@@ -7,10 +7,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <PlatformTarget>x64</PlatformTarget>
-    <ApplicationIcon>resources\assets\app.ico</ApplicationIcon>
+    <ApplicationIcon>assets\app.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
 	  
-    <Version>1.0.0</Version><!-- 程序主版本（UpdateChecker / About用） -->
+    <Version>1.0</Version><!-- 程序主版本（UpdateChecker / About用） -->
     <AssemblyVersion>1.0.0.0</AssemblyVersion><!-- 稳定不动 -->
     <FileVersion>1.0.0.0</FileVersion><!-- 文件属性显示 -->
   </PropertyGroup>
@@ -22,10 +22,10 @@
 
   <ItemGroup>
     <!-- 自动复制 themes 与 lang 两个目录下的所有文件 -->
-    <None Include="resources\themes\**\*.*">
+    <None Include="themes\**\*.*">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="resources\lang\**\*.*">
+    <None Include="lang\**\*.*">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="assets\**\*.*">
